--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "start": "node ./server.js",
-    "dev2": "concurrently \"react-scripts start\" \"node ./server.js\"",
+    "dev-server": "concurrently \"react-scripts start\" \"node ./server.js\"",
     "dev": "concurrently \"react-scripts start\" \"npm run server\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
